set command options as an array of string for execution on windows